crates/strider-analyze/tests/snapshots/v3__mips32le__control__clamp.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="arg[2] ← a2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v16" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "15" -> "v16" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v17" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "15" -> "v17" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v2" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "19" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v17" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v16" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "19" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "8" -> "20" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "20" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "20" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "21" [label="φ v0", shape=house, fillcolor="#163030"];
  "19" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "14" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "7" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
