crates/strider-analyze/tests/snapshots/v3__mips32le__control__early_return.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v12" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v14" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "13" -> "v14" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v15" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "13" -> "v15" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "17" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v18" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v18" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "17" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v15" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "20" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v18" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "20" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "20" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="φ v0", shape=house, fillcolor="#163030"];
  "11" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v14" -> "27" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "27" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "27" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "16" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
